The room info link in the banner no longer appears as the words 'Room info'.  Instead, it shows the room info itself if it is short enough, or it shows a shortened version if it is too long.  Either way, the user may click on it to see the full version in a popup.
I have also replaced the words 'close window' with the close window
icon, but I can't figure out how to make it appear on the right side
of the box.

--- a/webcit/static/webcit.css
+++ b/webcit/static/webcit.css
@@ -131,6 +131,7 @@ body {
         font-size: 8pt;
 	color: black;
         text-align: right;
+	align: right;
         padding: 2px;
 	margin-top: 5px;
 }
